--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
   <title>DuelRecords</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+<%= nav_bar fixed: :top, brand: "DuelRecords",  brand_link: root_path, responsive: true do %>
+  <%= menu_group do %>
+    <%= menu_item "Home", root_path %>
+  <% end %>
+  <%= menu_group pull: :right do %>
+    <%= menu_item "Twitterでログイン", '/auth/twitter' %>
+  <% end %>
+<% end %>
+<div class="container">
+  <%= yield %>
+</div>
 </body>
 </html>
