--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,11 @@
     <%= menu_item "Home", root_path %>
   <% end %>
   <%= menu_group pull: :right do %>
-    <%= menu_item "Twitterでログイン", '/auth/twitter' %>
+    <%= menu_item "twitterでログイン", '/auth/twitter' %>
   <% end %>
 <% end %>
 <div class="container">
+  <%= bootstrap_flash %>
   <%= yield %>
 </div>
 </body>
