--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= nav_bar fixed: :top, brand: "DuelRecords",  brand_link: root_path, responsive: true do %>
+<%= nav_bar fixed: :top, brand: 'DuelRecords',  brand_link: root_path, responsive: true do %>
   <%= menu_group do %>
-    <%= menu_item "Home", root_path %>
+    <%= menu_item 'Home', root_path %>
   <% end %>
   <%= menu_group pull: :right do %>
-    <%= menu_item "twitterでログイン", '/auth/twitter' %>
+    <% if logged_in? %>
+      <%= menu_item 'ログアウト', logout_path %>
+    <% else %>
+      <%= menu_item 'twitterでログイン', '/auth/twitter' %>
+    <% end %>
   <% end %>
 <% end %>
 <div class="container">
