--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <body>
 <%= nav_bar fixed: :top, brand: 'DuelRecords',  brand_link: root_path, responsive: true do %>
   <%= menu_group do %>
-    <%= menu_item 'Home', root_path %>
+    <%= menu_item 'デュエルを記録する', new_duel_path %>
   <% end %>
   <%= menu_group pull: :right do %>
     <% if logged_in? %>
