--- a/app/views/duels/new.html.erb
+++ b/app/views/duels/new.html.erb
@@ -16,12 +16,12 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :winner %>
-    <%= f.collection_select :winner, User.all.order(:nickname), :id, :nickname, { selected: current_user.id }, { class: 'form-control' } %>
+    <%= f.label :winner_id %>
+    <%= f.collection_select :winner_id, User.all.order(:nickname), :id, :nickname, { selected: current_user.id }, { class: 'form-control' } %>
   </div>
   <div class="form-group">
-    <%= f.label :loser %>
-    <%= f.collection_select :loser, User.all.order(:nickname), :id, :nickname, { selected: current_user.id }, { class: 'form-control' } %>
+    <%= f.label :loser_id %>
+    <%= f.collection_select :loser_id, User.all.order(:nickname), :id, :nickname, { selected: current_user.id }, { class: 'form-control' } %>
   </div>
   <div class="form-group">
     <%= f.label :date %>
