イベント一覧ページの作成

--- a/app/views/duels/show.html.erb
+++ b/app/views/duels/show.html.erb
@@ -10,7 +10,7 @@
     対戦日
   </div>
   <div class="panel-body">
-    <%= @duel.date %>
+    <%= @duel.date.strftime('%Y/%m/%d') %>
   </div>
 </div>
 <div class="panel panel-default">
