--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="page-header">
+  <h1>戦績一覧</h1>
+</div>
+<div class="list-group">
+  <% @duels.each do |duel| %>
+    <%= link_to(duel, class: 'list-group-item') do %>
+      <h4 class="list-group-item-heading">
+        <%= "@#{duel.winner.nickname} v.s. @#{duel.loser.nickname}" %>
+      </h4>
+      <p>
+        <%= duel.date.strftime('%Y/%m/%d') %>
+      </p>
+    <% end %>
+  <% end %>
+</div>
