--- a/app/views/duels/new.html.erb
+++ b/app/views/duels/new.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="form-group">
     <%= f.label :date %>
-    <%= f.date_field :date, start_year: now.year - 1, end_year: now.year, class: 'form-control' %>
+    <%= f.date_field :date, start_year: now.year - 1, end_year: now.year, class: 'form-control', value: Time.now.strftime("%Y-%m-%d") %>
   </div>
   <div class="form-group">
     <%= f.label :life_points %>
