--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,8 @@
         <%= "@#{duel.winner.nickname} v.s. @#{duel.loser.nickname}" %>
       </h4>
       <p>
-        <%= duel.date.strftime('%Y/%m/%d') %>
+        <%= duel.date.strftime('%Y/%m/%d') %><br>
+        <%= duel.life_points %>
       </p>
     <% end %>
   <% end %>
