内容の表示

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,8 @@
       </h4>
       <p>
         <%= duel.date.strftime('%Y/%m/%d') %><br>
-        <%= duel.life_points %>
+        <%= duel.life_points %><br>
+        <%= duel.content %>
       </p>
     <% end %>
   <% end %>
