--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,8 @@
       </h4>
       <p>
         <%= duel.date.strftime('%Y/%m/%d') %><br>
-        <%= duel.life_points %>
+        <%= duel.life_points %><br>
+        <%= duel.content %>
       </p>
     <% end %>
   <% end %>
