--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,16 +2,5 @@
   <h1>戦績一覧</h1>
 </div>
 <div class="list-group">
-  <% @duels.each do |duel| %>
-    <%= link_to(duel, class: 'list-group-item') do %>
-      <h4 class="list-group-item-heading">
-        <%= "@#{duel.winner.nickname} v.s. @#{duel.loser.nickname}" %>
-      </h4>
-      <p>
-        <%= duel.date.strftime('%Y/%m/%d') %><br>
-        <%= duel.life_points %><br>
-        <%= duel.content %>
-      </p>
-    <% end %>
-  <% end %>
+  <%= render partial: 'duel', collection: @duels %>
 </div>
