--- a/app/views/duels/edit.html.erb
+++ b/app/views/duels/edit.html.erb
@@ -4,7 +4,7 @@
   <h1>デュエルを編集する</h1>
 </div>
 
-<%= form_for @duel do |f| %>
+<%= form_for(@duel, html: { class: 'form-horizontal' }) do |f| %>
   <% if @duel.errors.any? %>
     <div class="alert alert-warning">
       <ul>
@@ -16,24 +16,38 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :winner_id %>
-    <%= f.collection_select :winner_id, User.all.order(:nickname), :id, :nickname, {}, { class: 'form-control' } %>
+    <%= f.label :winner_id, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.collection_select :winner_id, User.all.order(:nickname), :id, :nickname, { }, { class: 'form-control' } %>
+    </div>
   </div>
   <div class="form-group">
-    <%= f.label :loser_id %>
-    <%= f.collection_select :loser_id, User.all.order(:nickname), :id, :nickname, {}, { class: 'form-control' } %>
+    <%= f.label :loser_id, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.collection_select :loser_id, User.all.order(:nickname), :id, :nickname, { }, { class: 'form-control' } %>
+    </div>
   </div>
   <div class="form-group">
-    <%= f.label :date %>
-    <%= f.date_field :date, start_year: now.year - 1, end_year: now.year, class: 'form-control' %>
+    <%= f.label :date, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.date_field :date, start_year: now.year - 1, end_year: now.year, class: 'form-control' %>
+    </div>
   </div>
   <div class="form-group">
-    <%= f.label :life_points %>
-    <%= f.number_field :life_points, class: 'form-control' %>
+    <%= f.label :life_points, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.number_field :life_points, class: 'form-control' %>
+    </div>
   </div>
   <div class="form-group">
-    <%= f.label :content %>
-    <%= f.text_area :content, class: 'form-control', row: 3 %>
+    <%= f.label :content, class: 'col-sm-2 control-label' %>
+    <div class="col-sm-10">
+      <%= f.text_area :content, class: 'form-control', row: 3 %>
+    </div>
   </div>
-  <%= f.submit '更新する', class: 'btn btn-default', data: { disabel_with: '更新中……' } %>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= f.submit '更新する', class: 'btn btn-default', data: { disabel_with: '更新中……' } %>
+    </div>
+  </div>
 <% end %>
