--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,17 @@
+<% t = Time.now %>
 <div class="page-header">
   <h1>
     <%= "@#{@user.nickname} の戦績" %>
   </h1>
 </div>
+<%= form_tag('', method: 'get', class: 'form-inline', enforce_utf8: false) do %>
+  期間を指定:
+  <%= date_field_tag :start, (t - 30*24*60*60).strftime("%Y-%m-%d"), class: 'form-control' %>
+  〜
+  <%= date_field_tag :end, t.strftime("%Y-%m-%d"), class: 'form-control' %>
+  <%= submit_tag '送信', class: 'btn btn-default', name: nil %>
+<% end %>
+<hr>
 <div class="table-responsive">
   <table class="table table-striped">
     <thead>
