_duelのディレクトリを変更

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,5 +2,5 @@
   <h1>戦績一覧</h1>
 </div>
 <div class="list-group">
-  <%= render partial: 'duel', collection: @duels %>
+  <%= render @duels %>
 </div>
