--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <% end %>
   <%= menu_group pull: :right do %>
     <% if logged_in? %>
+      <%= menu_item '退会', retire_user_path %>
       <%= menu_item 'ログアウト', logout_path %>
     <% else %>
       <%= menu_item 'twitterでログイン', '/auth/twitter' %>
