--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,5 +31,12 @@
   <%= bootstrap_flash %>
   <%= yield %>
 </div>
+<footer>
+  <div class="container">
+    <p class="text-center">
+      <small>&copy; 2015 <%= link_to '@sankichi92', 'https://github.com/sankichi92' %></small>
+    </p>
+  </div>
+</footer>
 </body>
 </html>
